VSE Audio Volume not set immediately #52472

Closed
opened 2017-08-20 22:53:29 +02:00 by Mark Ormston · 8 comments

System Information
Windows 7 x64, GeForce GTX 980Ti

Blender Version
Broken:

Windows x64
Stable: v2.78c (Date: 2017-02-24 14:33)
Test Build v2.79 (Date: 2017-08-19 18:00)

Worked: Unknown

Short description of error
In the VSE, when adding an audio file or a video and setting the volume down, the volume is at 100% for a split moment before changing. This is only occasionally noticeable when previewing, but it is pretty much guaranteed when rendered to a video file.

I have tried delaying the audio by a few frames, but it seems to occur starting from the first frame the audio can be heard. Since I am making video with my voice in it, and loud videos are being used that need to be greatly reduced in volume (down to 0.1 usually), this is causing loud blips throughout the rendered video when switching source videos.

Exact steps for others to reproduce the error
SoundBlip.zip
In the attached zip file, the .blend shows the problem. I want the volume of that very annoying ambient sound to be quiet (down to 0.1). When you render it, it is at full volume for a split moment before adjusting the volume.
Source Video: SoundProblem.avi - Loud, but there is no blip in it
Rendered Videos: Blender-SoundProblem (from [Version]) - A loud blip at the beginning before it is quieted down

I just want the audio to start at the volume I specified, instead of at full volume briefly before quieting down.

**System Information** Windows 7 x64, GeForce GTX 980Ti **Blender Version** Broken: ``` Windows x64 Stable: v2.78c (Date: 2017-02-24 14:33) Test Build v2.79 (Date: 2017-08-19 18:00) ``` Worked: Unknown **Short description of error** In the VSE, when adding an audio file or a video and setting the volume down, the volume is at 100% for a split moment before changing. This is only occasionally noticeable when previewing, but it is pretty much guaranteed when rendered to a video file. I have tried delaying the audio by a few frames, but it seems to occur starting from the first frame the audio can be heard. Since I am making video with my voice in it, and loud videos are being used that need to be greatly reduced in volume (down to 0.1 usually), this is causing loud blips throughout the rendered video when switching source videos. **Exact steps for others to reproduce the error** [SoundBlip.zip](https://archive.blender.org/developer/F719801/SoundBlip.zip) In the attached zip file, the .blend shows the problem. I want the volume of that very annoying ambient sound to be quiet (down to 0.1). When you render it, it is at full volume for a split moment before adjusting the volume. Source Video: SoundProblem.avi - Loud, but there is no blip in it Rendered Videos: Blender-SoundProblem (from [*Version*]) - A loud blip at the beginning before it is quieted down I just want the audio to start at the volume I specified, instead of at full volume briefly before quieting down.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Zolaerla

Added subscriber: @Zolaerla

Added subscribers: @neXyon, @mont29

Added subscribers: @neXyon, @mont29
Joerg Mueller was assigned by Bastien Montagne 2017-08-26 14:51:08 +02:00

@neXyon, care to check that one? Thanks.

@neXyon, care to check that one? Thanks.

This issue was referenced by 8d207cdc3b

This issue was referenced by 8d207cdc3b307fa20bc5b29059c596306aa2a65c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

This is because audio volume changes are always faded and the initial volume is 1.0. The bugfix sets this initial volume to 0.0 so that it's more a fade in. Meanwhile you can try to set the mixdown "Accuracy" to lower values than 1024. This will make it take longer for the export (1 would take VERY long, I'd start with 128 and keep halving that) but if the first few samples of your sound file are not too loud, this can help.

This is because audio volume changes are always faded and the initial volume is 1.0. The bugfix sets this initial volume to 0.0 so that it's more a fade in. Meanwhile you can try to set the mixdown "Accuracy" to lower values than 1024. This will make it take longer for the export (1 would take VERY long, I'd start with 128 and keep halving that) but if the first few samples of your sound file are not too loud, this can help.
Author

I have downloaded the release version of 2.79, and I am happy to say the problem has been completely resolved! Thank you!

I have downloaded the release version of 2.79, and I am happy to say the problem has been completely resolved! Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52472
No description provided.