Fix T52472: VSE Audio Volume not set immediately

Audio mixing is done with volume interpolation. A new handle started at
volume 1, now starting at volume 0 for a smooth fade in.